# codex-account-switcher

./: .gitignore  README.md  meson.build
.github/workflows/: release.yml
data/: io.github.jR4dh3y.CodexAccountSwitcher.desktop  io.github.jR4dh3y.CodexMultiAccountSwitcher.desktop
packaging/aur/codex-account-switcher-bin/: .SRCINFO  PKGBUILD  README.md
packaging/aur/codex-multi-account-switcher-bin/: .SRCINFO  PKGBUILD  README.md
scripts/: build-release-archive.sh
src/: account_card.vala  account_store.vala  add_account_dialog.vala  application.vala  auth_manager.vala  main.vala  usage_checker.vala  window.vala
